// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedInvestigationItem Snapshot matches snapshot 1`] = `
<div
  class="cds--css-grid"
>
  <div
    class="selectedInvestigationTitle cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-11 cds--xlg:col-span-11 cds--css-grid-column"
  >
    Complete Blood Count (CBC)
    <a
      class="cds--link addInvestigationNote"
      href="#"
    >
      Add Note
    </a>
  </div>
  <div
    class="selectedInvestigationUrgentPriority cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
  >
    <div
      class="cds--form-item cds--checkbox-wrapper"
    >
      <input
        class="cds--checkbox"
        id="investigation-priority-checkbox-test-investigation-1"
        type="checkbox"
      />
      <label
        class="cds--checkbox-label"
        for="investigation-priority-checkbox-test-investigation-1"
        title=""
      >
        <span
          class="cds--checkbox-label-text"
          dir="auto"
        >
          Urgent
        </span>
      </label>
      <div
        class="cds--checkbox__validation-msg"
      />
    </div>
  </div>
</div>
`;

exports[`SelectedInvestigationItem Snapshot matches snapshot with existing note 1`] = `
<div
  class="cds--css-grid"
>
  <div
    class="selectedInvestigationTitle cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-11 cds--xlg:col-span-11 cds--css-grid-column"
  >
    Complete Blood Count (CBC)
  </div>
  <div
    class="selectedInvestigationUrgentPriority cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
  >
    <div
      class="cds--form-item cds--checkbox-wrapper"
    >
      <input
        class="cds--checkbox"
        id="investigation-priority-checkbox-test-investigation-1"
        type="checkbox"
      />
      <label
        class="cds--checkbox-label"
        for="investigation-priority-checkbox-test-investigation-1"
        title=""
      >
        <span
          class="cds--checkbox-label-text"
          dir="auto"
        >
          Urgent
        </span>
      </label>
      <div
        class="cds--checkbox__validation-msg"
      />
    </div>
  </div>
</div>
`;
